Update User Model Management features for Cloud Infra
