# api/swagger.yaml
@@ -1,5 +1,93 @@
 basePath: /damselfly
 definitions:
+  model.TbMciDynamicReq:
+    properties:
+      description:
+        example: Made in CB-TB
+        type: string
+      installMonAgent:
+        default: "no"
+        description: InstallMonAgent Option for CB-Dragonfly agent installation ([yes/no]
+          default:yes)
+        enum:
+        - "yes"
+        - "no"
+        example: "no"
+        type: string
+      label:
+        additionalProperties:
+          type: string
+        description: Label is for describing the object by keywords
+        type: object
+      name:
+        example: mci01
+        type: string
+      systemLabel:
+        description: SystemLabel is for describing the mci in a keyword (any string
+          can be used) for special System purpose
+        example: ""
+        type: string
+      vm:
+        items:
+          $ref: '#/definitions/model.TbVmDynamicReq'
+        type: array
+    required:
+    - name
+    - vm
+    type: object
+  model.TbVmDynamicReq:
+    properties:
+      commonImage:
+        description: CommonImage is field for id of a image in common namespace
+        example: ubuntu18.04
+        type: string
+      commonSpec:
+        description: CommonSpec is field for id of a spec in common namespace
+        example: aws+ap-northeast-2+t2.small
+        type: string
+      connectionName:
+        description: |-
+          if ConnectionName is given, the VM tries to use associtated credential.
+          if not, it will use predefined ConnectionName in Spec objects
+        type: string
+      description:
+        example: Description
+        type: string
+      label:
+        additionalProperties:
+          type: string
+        description: Label is for describing the object by keywords
+        type: object
+      name:
+        description: VM name or subGroup name if is (not empty) && (> 0). If it is
+          a group, actual VM name will be generated with -N postfix.
+        example: g1-1
+        type: string
+      rootDiskSize:
+        default: default
+        description: '"default", Integer (GB): ["50", ..., "1000"]'
+        example: default, 30, 42, ...
+        type: string
+      rootDiskType:
+        default: default
+        description: '"", "default", "TYPE1", AWS: ["standard", "gp2", "gp3"], Azure:
+          ["PremiumSSD", "StandardSSD", "StandardHDD"], GCP: ["pd-standard", "pd-balanced",
+          "pd-ssd", "pd-extreme"], ALIBABA: ["cloud_efficiency", "cloud", "cloud_essd"],
+          TENCENT: ["CLOUD_PREMIUM", "CLOUD_SSD"]'
+        example: default, TYPE1, ...
+        type: string
+      subGroupSize:
+        default: "1"
+        description: if subGroupSize is (not empty) && (> 0), subGroup will be generated.
+          VMs will be created accordingly.
+        example: "3"
+        type: string
+      vmUserPassword:
+        type: string
+    required:
+    - commonImage
+    - commonSpec
+    type: object
   onprem.CpuProperty:
     properties:
       architecture:
@@ -197,7 +285,22 @@ definitions:
           $ref: '#/definitions/onprem.RouteProperty'
         type: array
     type: object
-  pkg_api_rest_handler.MyModel:
+  pkg_api_rest_handler.MyCloudModel:
+    properties:
+      cloud:
+        $ref: '#/definitions/model.TbMciDynamicReq'
+      id:
+        type: integer
+      istargetmodel:
+        type: boolean
+      version:
+        description: "Name \t\tstring  \t\t\t\t`json:\"name\"`\nDescription \tstring
+          \t\t\t\t\t`json:\"description\"`"
+        type: string
+    required:
+    - cloud
+    type: object
+  pkg_api_rest_handler.MyOnPremModel:
     properties:
       description:
         type: string
@@ -216,7 +319,22 @@ definitions:
     required:
     - servers
     type: object
-  pkg_api_rest_handler.ReqCreateModel:
+  pkg_api_rest_handler.ReqCreateCloudModel:
+    properties:
+      cloud:
+        $ref: '#/definitions/model.TbMciDynamicReq'
+      id:
+        type: integer
+      istargetmodel:
+        type: boolean
+      version:
+        description: "Name \t\tstring  \t\t\t\t`json:\"name\"`\nDescription \tstring
+          \t\t\t\t\t`json:\"description\"`"
+        type: string
+    required:
+    - cloud
+    type: object
+  pkg_api_rest_handler.ReqCreateOnPremModel:
     properties:
       description:
         type: string
@@ -235,7 +353,22 @@ definitions:
     required:
     - servers
     type: object
-  pkg_api_rest_handler.ReqUpdateModel:
+  pkg_api_rest_handler.ReqUpdateCloudModel:
+    properties:
+      cloud:
+        $ref: '#/definitions/model.TbMciDynamicReq'
+      id:
+        type: integer
+      istargetmodel:
+        type: boolean
+      version:
+        description: "Name \t\tstring  \t\t\t\t`json:\"name\"`\nDescription \tstring
+          \t\t\t\t\t`json:\"description\"`"
+        type: string
+    required:
+    - cloud
+    type: object
+  pkg_api_rest_handler.ReqUpdateOnPremModel:
     properties:
       description:
         type: string
@@ -254,7 +387,22 @@ definitions:
     required:
     - servers
     type: object
-  pkg_api_rest_handler.ResCreateModel:
+  pkg_api_rest_handler.ResCreateCloudModel:
+    properties:
+      cloud:
+        $ref: '#/definitions/model.TbMciDynamicReq'
+      id:
+        type: integer
+      istargetmodel:
+        type: boolean
+      version:
+        description: "Name \t\tstring  \t\t\t\t`json:\"name\"`\nDescription \tstring
+          \t\t\t\t\t`json:\"description\"`"
+        type: string
+    required:
+    - cloud
+    type: object
+  pkg_api_rest_handler.ResCreateOnPremModel:
     properties:
       description:
         type: string
@@ -273,30 +421,52 @@ definitions:
     required:
     - servers
     type: object
-  pkg_api_rest_handler.ResGetModel:
+  pkg_api_rest_handler.ResGetCloudModel:
     properties:
-      description:
-        type: string
+      cloud:
+        $ref: '#/definitions/model.TbMciDynamicReq'
       id:
         type: integer
-      name:
-        type: string
-      network:
-        $ref: '#/definitions/onprem.NetworkProperty'
-      servers:
-        items:
-          $ref: '#/definitions/onprem.ServerProperty'
-        type: array
+      istargetmodel:
+        type: boolean
       version:
+        description: "Name \t\tstring  \t\t\t\t`json:\"name\"`\nDescription \tstring
+          \t\t\t\t\t`json:\"description\"`"
         type: string
     required:
-    - servers
+    - cloud
     type: object
-  pkg_api_rest_handler.ResGetModels:
+  pkg_api_rest_handler.ResGetCloudModels:
     properties:
       models:
         items:
-          $ref: '#/definitions/pkg_api_rest_handler.MyModel'
+          $ref: '#/definitions/pkg_api_rest_handler.MyCloudModel'
+        type: array
+    type: object
+  pkg_api_rest_handler.ResGetOnPremModel:
+    properties:
+      description:
+        type: string
+      id:
+        type: integer
+      name:
+        type: string
+      network:
+        $ref: '#/definitions/onprem.NetworkProperty'
+      servers:
+        items:
+          $ref: '#/definitions/onprem.ServerProperty'
+        type: array
+      version:
+        type: string
+    required:
+    - servers
+    type: object
+  pkg_api_rest_handler.ResGetOnPremModels:
+    properties:
+      models:
+        items:
+          $ref: '#/definitions/pkg_api_rest_handler.MyOnPremModel'
         type: array
     type: object
   pkg_api_rest_handler.ResHTTPVersion:
@@ -309,7 +479,22 @@ definitions:
       message:
         type: string
     type: object
-  pkg_api_rest_handler.ResUpdateModel:
+  pkg_api_rest_handler.ResUpdateCloudModel:
+    properties:
+      cloud:
+        $ref: '#/definitions/model.TbMciDynamicReq'
+      id:
+        type: integer
+      istargetmodel:
+        type: boolean
+      version:
+        description: "Name \t\tstring  \t\t\t\t`json:\"name\"`\nDescription \tstring
+          \t\t\t\t\t`json:\"description\"`"
+        type: string
+    required:
+    - cloud
+    type: object
+  pkg_api_rest_handler.ResUpdateOnPremModel:
     properties:
       description:
         type: string
@@ -364,7 +549,7 @@ paths:
       summary: Check HTTP version of incoming request
       tags:
       - '[Admin] System management'
-  /model:
+  /model/cloud:
     get:
       consumes:
       - application/json
@@ -375,7 +560,7 @@ paths:
         "200":
           description: (sample) This is a list of models
           schema:
-            $ref: '#/definitions/pkg_api_rest_handler.ResGetModels'
+            $ref: '#/definitions/pkg_api_rest_handler.ResGetCloudModels'
         "404":
           description: model not found
           schema:
@@ -393,7 +578,7 @@ paths:
         name: Model
         required: true
         schema:
-          $ref: '#/definitions/pkg_api_rest_handler.ReqCreateModel'
+          $ref: '#/definitions/pkg_api_rest_handler.ReqCreateCloudModel'
       produces:
       - application/json
       responses:
@@ -401,7 +586,7 @@ paths:
           description: (Sample) This is a sample description for success response
             in Swagger UI
           schema:
-            $ref: '#/definitions/pkg_api_rest_handler.ResCreateModel'
+            $ref: '#/definitions/pkg_api_rest_handler.ResCreateCloudModel'
         "400":
           description: Invalid Request
           schema:
@@ -409,7 +594,7 @@ paths:
       summary: Create a new model
       tags:
       - '[API] Cloud Migration Models (TBD)'
-  /model/{id}:
+  /model/cloud/{id}:
     delete:
       consumes:
       - application/json
@@ -454,7 +639,7 @@ paths:
         "200":
           description: (Sample) a model
           schema:
-            $ref: '#/definitions/pkg_api_rest_handler.ResGetModel'
+            $ref: '#/definitions/pkg_api_rest_handler.ResGetCloudModel'
         "404":
           description: model not found
           schema:
@@ -477,7 +662,7 @@ paths:
         name: Model
         required: true
         schema:
-          $ref: '#/definitions/pkg_api_rest_handler.ReqUpdateModel'
+          $ref: '#/definitions/pkg_api_rest_handler.ReqUpdateCloudModel'
       produces:
       - application/json
       responses:
@@ -485,7 +670,136 @@ paths:
           description: (Sample) This is a sample description for success response
             in Swagger UI
           schema:
-            $ref: '#/definitions/pkg_api_rest_handler.ResUpdateModel'
+            $ref: '#/definitions/pkg_api_rest_handler.ResUpdateCloudModel'
+        "400":
+          description: Invalid Request
+          schema:
+            type: object
+      summary: Update a model
+      tags:
+      - '[API] Cloud Migration Models (TBD)'
+  /model/onprem:
+    get:
+      consumes:
+      - application/json
+      description: Get a list of models.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: (sample) This is a list of models
+          schema:
+            $ref: '#/definitions/pkg_api_rest_handler.ResGetOnPremModels'
+        "404":
+          description: model not found
+          schema:
+            type: object
+      summary: Get a list of models
+      tags:
+      - '[API] Cloud Migration Models (TBD)'
+    post:
+      consumes:
+      - application/json
+      description: Create a new model with the given information.
+      parameters:
+      - description: model information
+        in: body
+        name: Model
+        required: true
+        schema:
+          $ref: '#/definitions/pkg_api_rest_handler.ReqCreateOnPremModel'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: (Sample) This is a sample description for success response
+            in Swagger UI
+          schema:
+            $ref: '#/definitions/pkg_api_rest_handler.ResCreateOnPremModel'
+        "400":
+          description: Invalid Request
+          schema:
+            type: object
+      summary: Create a new model
+      tags:
+      - '[API] Cloud Migration Models (TBD)'
+  /model/onprem/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete a model with the given information.
+      parameters:
+      - description: Model ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Model deletion successful
+          schema:
+            type: string
+        "400":
+          description: Invalid Request
+          schema:
+            type: object
+        "404":
+          description: Model Not Found
+          schema:
+            type: object
+      summary: Delete a model
+      tags:
+      - '[API] Cloud Migration Models (TBD)'
+    get:
+      consumes:
+      - application/json
+      description: Get a specific model.
+      parameters:
+      - description: Model ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: (Sample) a model
+          schema:
+            $ref: '#/definitions/pkg_api_rest_handler.ResGetOnPremModel'
+        "404":
+          description: model not found
+          schema:
+            type: object
+      summary: Get a specific model
+      tags:
+      - '[API] Cloud Migration Models (TBD)'
+    put:
+      consumes:
+      - application/json
+      description: Update a model with the given information.
+      parameters:
+      - description: Model ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Model information to update
+        in: body
+        name: Model
+        required: true
+        schema:
+          $ref: '#/definitions/pkg_api_rest_handler.ReqUpdateOnPremModel'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: (Sample) This is a sample description for success response
+            in Swagger UI
+          schema:
+            $ref: '#/definitions/pkg_api_rest_handler.ResUpdateOnPremModel'
         "400":
           description: Invalid Request
           schema:
