# pkg/api/rest/handler/model.go
@@ -10,9 +10,13 @@ import (
 
 	"github.com/cloud-barista/cm-damselfly/pkg/lkvstore"
 	onprem "github.com/cloud-barista/cm-model/infra/onprem"
+	tbmodel "github.com/cloud-barista/cb-tumblebug/src/core/model"
 )
 
-type MyModel struct {
+// ##############################################################################################
+// ### On-premise Infra Model
+// ##############################################################################################
+type MyOnPremModel struct {
 	Id   		int    					`json:"id"`
 	Name 		string  				`json:"name"`
 	Description string 					`json:"description"`
@@ -25,20 +29,20 @@ type MyModel struct {
 // Init Swagger : ]# swag init --parseDependency --parseInternal
 // Need to add '--parseDependency --parseInternal' in order to apply imported structures
 
-type ResGetModels struct {
-	Models []MyModel `json:"models"`
+type ResGetOnPremModels struct {
+	Models []MyOnPremModel `json:"models"`
 }
 
-// GetModels godoc
+// GetOnPremModels godoc
 // @Summary Get a list of models
 // @Description Get a list of models.
 // @Tags [API] Cloud Migration Models (TBD)
 // @Accept  json
 // @Produce  json
-// @Success 200 {object} ResGetModels "(sample) This is a list of models"
+// @Success 200 {object} ResGetOnPremModels "(sample) This is a list of models"
 // @Failure 404 {object} object "model not found"
-// @Router /model [get]
-func GetModels(c echo.Context) error {
+// @Router /model/onprem [get]
+func GetOnPremModels(c echo.Context) error {
 
 	// GetWithPrefix returns the values for a given key prefix.
 	valueList, exists := lkvstore.GetWithPrefix("")
@@ -51,25 +55,25 @@ func GetModels(c echo.Context) error {
 	}
 }
 
-type ResGetModel struct {
-	MyModel
+type ResGetOnPremModel struct {
+	MyOnPremModel
 }
 
-// GetModel godoc
+// GetOnPremModel godoc
 // @Summary Get a specific model
 // @Description Get a specific model.
 // @Tags [API] Cloud Migration Models (TBD)
 // @Accept  json
 // @Produce  json
 // @Param id path int true "Model ID"
-// @Success 200 {object} ResGetModel "(Sample) a model"
+// @Success 200 {object} ResGetOnPremModel "(Sample) a model"
 // @Failure 404 {object} object "model not found"
-// @Router /model/{id} [get]
-func GetModel(c echo.Context) error {
+// @Router /model/onprem/{id} [get]
+func GetOnPremModel(c echo.Context) error {
 	if strings.EqualFold(c.Param("id"), "") {
 		return c.JSON(http.StatusBadRequest, "Invalid ID!!")
 	}
-	fmt.Printf("### MyModel ID to Get : [%s]", c.Param("id"))
+	fmt.Printf("### MyOnPremModel ID to Get : [%s]", c.Param("id"))
 
 	// Verify loaded data without prefix
 	value, exists := lkvstore.Get(c.Param("id"))
@@ -83,33 +87,33 @@ func GetModel(c echo.Context) error {
 }
 
 // [Note]
-// Struct Embedding is used to inherit the fields of MyModel
-type ReqCreateModel struct {
-	MyModel
+// Struct Embedding is used to inherit the fields of MyOnPremModel
+type ReqCreateOnPremModel struct {
+	MyOnPremModel
 }
 
 // [Note]
-// Struct Embedding is used to inherit the fields of MyModel
-type ResCreateModel struct {
-	MyModel
+// Struct Embedding is used to inherit the fields of MyOnPremModel
+type ResCreateOnPremModel struct {
+	MyOnPremModel
 }
 
-// CreateModel godoc
+// CreateOnPremModel godoc
 // @Summary Create a new model
 // @Description Create a new model with the given information.
 // @Tags [API] Cloud Migration Models (TBD)
 // @Accept  json
 // @Produce  json
-// @Param Model body ReqCreateModel true "model information"
-// @Success 201 {object} ResCreateModel "(Sample) This is a sample description for success response in Swagger UI"
+// @Param Model body ReqCreateOnPremModel true "model information"
+// @Success 201 {object} ResCreateOnPremModel "(Sample) This is a sample description for success response in Swagger UI"
 // @Failure 400 {object} object "Invalid Request"
-// @Router /model [post]
-func CreateModel(c echo.Context) error {
-	model := new(ReqCreateModel)
+// @Router /model/onprem [post]
+func CreateOnPremModel(c echo.Context) error {
+	model := new(ReqCreateOnPremModel)
 	if err := c.Bind(model); err != nil {
 		return c.JSON(http.StatusBadRequest, "Invalid Request")
 	}
-	// fmt.Println("### MyModel",)
+	// fmt.Println("### MyOnPremModel",)
 	// spew.Dump(model)
 
 	// # Incase of int type of ID
@@ -138,29 +142,29 @@ func CreateModel(c echo.Context) error {
 }
 
 // [Note]
-// Struct Embedding is used to inherit the fields of MyModel
-type ReqUpdateModel struct {
-	MyModel
+// Struct Embedding is used to inherit the fields of MyOnPremModel
+type ReqUpdateOnPremModel struct {
+	MyOnPremModel
 }
 
 // [Note]
-// Struct Embedding is used to inherit the fields of MyModel
-type ResUpdateModel struct {
-	MyModel
+// Struct Embedding is used to inherit the fields of MyOnPremModel
+type ResUpdateOnPremModel struct {
+	MyOnPremModel
 }
 
-// UpdateModel godoc
+// UpdateOnPremModel godoc
 // @Summary Update a model
 // @Description Update a model with the given information.
 // @Tags [API] Cloud Migration Models (TBD)
 // @Accept  json
 // @Produce  json
 // @Param id path int true "Model ID"
-// @Param Model body ReqUpdateModel true "Model information to update"
-// @Success 201 {object} ResUpdateModel "(Sample) This is a sample description for success response in Swagger UI"
+// @Param Model body ReqUpdateOnPremModel true "Model information to update"
+// @Success 201 {object} ResUpdateOnPremModel "(Sample) This is a sample description for success response in Swagger UI"
 // @Failure 400 {object} object "Invalid Request"
-// @Router /model/{id} [put]
-func UpdateModel(c echo.Context) error {
+// @Router /model/onprem/{id} [put]
+func UpdateOnPremModel(c echo.Context) error {
 	if strings.EqualFold(c.Param("id"), "") {
 		return c.JSON(http.StatusBadRequest, "Invalid ID!!")
 	}
@@ -170,20 +174,20 @@ func UpdateModel(c echo.Context) error {
 		return c.JSON(http.StatusBadRequest, "Invalid ID format")
 	}
 
-	updateModel := new(ReqUpdateModel)
+	updateModel := new(ReqUpdateOnPremModel)
 	// Verify loaded data without prefix
 	_, exists := lkvstore.Get(c.Param("id"))
 	if exists {
 		fmt.Printf("Succeeded in Finding the model : '%s'\n", c.Param("id"))
-		fmt.Printf("### MyModel ID to Update : [%s]", c.Param("id"))
+		fmt.Printf("### MyOnPremModel ID to Update : [%s]", c.Param("id"))
 
-		// updateModel = new(ReqUpdateModel)
+		// updateModel = new(ReqUpdateOnPremModel)
 		if err := c.Bind(updateModel); err != nil {
 			return c.JSON(http.StatusBadRequest, "Invalid Request")
 		}	
 		updateModel.Id = id
-		// fmt.Println("### MyModel",)		
-		// spew.Dump(updateModel)
+		// fmt.Println("### MyOnPremModel",)		
+		// spew.Dump(updateOnPremModel)
 
 		// Convert to String type
 		strNum := strconv.Itoa(id)
@@ -212,7 +216,7 @@ func UpdateModel(c echo.Context) error {
 // [Note]
 // No ResponseBody required for "DELETE /model/{id}"
 
-// DeleteModel godoc
+// DeleteOnPremModel godoc
 // @Summary Delete a model
 // @Description Delete a model with the given information.
 // @Tags [API] Cloud Migration Models (TBD)
@@ -222,8 +226,249 @@ func UpdateModel(c echo.Context) error {
 // @Success 200 {string} string "Model deletion successful"
 // @Failure 400 {object} object "Invalid Request"
 // @Failure 404 {object} object "Model Not Found"
-// @Router /model/{id} [delete]
-func DeleteModel(c echo.Context) error {
+// @Router /model/onprem/{id} [delete]
+func DeleteOnPremModel(c echo.Context) error {
+	if strings.EqualFold(c.Param("id"), "") {
+		return c.JSON(http.StatusBadRequest, "Invalid ID!!")
+	}
+	fmt.Printf("### Model ID to Delete : [%s]", c.Param("id"))
+
+	// Verify loaded data without prefix
+	_, exists := lkvstore.Get(c.Param("id"))
+	if exists {
+		fmt.Printf("Succeeded in Finding the model : '%s'\n", c.Param("id"))
+		lkvstore.Delete(c.Param("id"))
+	} else {
+		newErr := fmt.Errorf("Failed to Find the Model : [%s]\n", c.Param("id"))
+		return c.JSON(http.StatusNotFound, newErr)
+	}
+
+	// Save the current state of the key-value store to file
+	if err := lkvstore.SaveLkvStore(); err != nil {
+		fmt.Printf("Failed to Save the lkvstore to file. : [%v]\n", err)
+	} else {
+		fmt.Println("Succeeded in Saving the lkvstore to file.")
+	}
+
+	return c.JSON(http.StatusOK, "Succeeded in Deleting the model")
+}
+
+// ##############################################################################################
+// ### Cloud Infra Model
+// ##############################################################################################
+
+type MyCloudModel struct {
+	Id   			int    					`json:"id"`
+	IsTargetModel	bool	  				`json:"istargetmodel"`	
+	// Name 		string  				`json:"name"`
+	// Description 	string 					`json:"description"`
+	Version			string  				`json:"version"`
+	MciDynamic 		tbmodel.TbMciDynamicReq `json:"cloud" validate:"required"`
+	// TODO: Add other fields
+}
+// Caution!!)
+// Init Swagger : ]# swag init --parseDependency --parseInternal
+// Need to add '--parseDependency --parseInternal' in order to apply imported structures
+
+type ResGetCloudModels struct {
+	Models []MyCloudModel `json:"models"`
+}
+
+// GetCloudModels godoc
+// @Summary Get a list of models
+// @Description Get a list of models.
+// @Tags [API] Cloud Migration Models (TBD)
+// @Accept  json
+// @Produce  json
+// @Success 200 {object} ResGetCloudModels "(sample) This is a list of models"
+// @Failure 404 {object} object "model not found"
+// @Router /model/cloud [get]
+func GetCloudModels(c echo.Context) error {
+
+	// GetWithPrefix returns the values for a given key prefix.
+	valueList, exists := lkvstore.GetWithPrefix("")
+	if exists {
+		fmt.Printf("Loaded values : %v\n", valueList)
+		return c.JSON(http.StatusOK, valueList)
+	} else {
+		newErr := fmt.Errorf("Failed to Find Any Model : [%s]\n", c.Param("id"))
+		return c.JSON(http.StatusNotFound, newErr)
+	}
+}
+
+type ResGetCloudModel struct {
+	MyCloudModel
+}
+
+// GetCloudModel godoc
+// @Summary Get a specific model
+// @Description Get a specific model.
+// @Tags [API] Cloud Migration Models (TBD)
+// @Accept  json
+// @Produce  json
+// @Param id path int true "Model ID"
+// @Success 200 {object} ResGetCloudModel "(Sample) a model"
+// @Failure 404 {object} object "model not found"
+// @Router /model/cloud/{id} [get]
+func GetCloudModel(c echo.Context) error {
+	if strings.EqualFold(c.Param("id"), "") {
+		return c.JSON(http.StatusBadRequest, "Invalid ID!!")
+	}
+	fmt.Printf("### MyCloudModel ID to Get : [%s]", c.Param("id"))
+
+	// Verify loaded data without prefix
+	value, exists := lkvstore.Get(c.Param("id"))
+	if exists {
+		fmt.Printf("Loaded value for '%s': %v\n", c.Param("id"), value)
+		return c.JSON(http.StatusOK, value)
+	} else {
+		newErr := fmt.Errorf("Failed to Find the Model : [%s]\n", c.Param("id"))
+		return c.JSON(http.StatusNotFound, newErr)
+	}
+}
+
+// [Note]
+// Struct Embedding is used to inherit the fields of MyCloudModel
+type ReqCreateCloudModel struct {
+	MyCloudModel
+}
+
+// [Note]
+// Struct Embedding is used to inherit the fields of MyCloudModel
+type ResCreateCloudModel struct {
+	MyCloudModel
+}
+
+// CreateCloudModel godoc
+// @Summary Create a new model
+// @Description Create a new model with the given information.
+// @Tags [API] Cloud Migration Models (TBD)
+// @Accept  json
+// @Produce  json
+// @Param Model body ReqCreateCloudModel true "model information"
+// @Success 201 {object} ResCreateCloudModel "(Sample) This is a sample description for success response in Swagger UI"
+// @Failure 400 {object} object "Invalid Request"
+// @Router /model/cloud [post]
+func CreateCloudModel(c echo.Context) error {
+	model := new(ReqCreateCloudModel)
+	if err := c.Bind(model); err != nil {
+		return c.JSON(http.StatusBadRequest, "Invalid Request")
+	}
+	// fmt.Println("### MyCloudModel",)
+	// spew.Dump(model)
+
+	// # Incase of int type of ID
+    randomNum, err := generateUnique15DigitInt()
+    if err != nil {
+        fmt.Println("Error:", err)
+    } else {
+        fmt.Println("Random 15-digit number:", randomNum)
+    }
+	model.Id = randomNum
+
+	// Convert Int to String type
+	strNum := strconv.Itoa(randomNum)
+
+	// Save the model to the key-value store
+	lkvstore.Put(strNum, model)
+
+	// Save the current state of the key-value store to file
+	if err := lkvstore.SaveLkvStore(); err != nil {
+		fmt.Printf("Failed to Save the lkvstore to file. : [%v]\n", err)
+	} else {
+		fmt.Println("Succeeded in Saving the lkvstore to file.")
+	}	
+
+	return c.JSON(http.StatusCreated, model)
+}
+
+// [Note]
+// Struct Embedding is used to inherit the fields of MyCloudModel
+type ReqUpdateCloudModel struct {
+	MyCloudModel
+}
+
+// [Note]
+// Struct Embedding is used to inherit the fields of MyCloudModel
+type ResUpdateCloudModel struct {
+	MyCloudModel
+}
+
+// UpdateCloudModel godoc
+// @Summary Update a model
+// @Description Update a model with the given information.
+// @Tags [API] Cloud Migration Models (TBD)
+// @Accept  json
+// @Produce  json
+// @Param id path int true "Model ID"
+// @Param Model body ReqUpdateCloudModel true "Model information to update"
+// @Success 201 {object} ResUpdateCloudModel "(Sample) This is a sample description for success response in Swagger UI"
+// @Failure 400 {object} object "Invalid Request"
+// @Router /model/cloud/{id} [put]
+func UpdateCloudModel(c echo.Context) error {
+	if strings.EqualFold(c.Param("id"), "") {
+		return c.JSON(http.StatusBadRequest, "Invalid ID!!")
+	}
+
+	id, err := strconv.Atoi(c.Param("id"))
+	if err != nil {
+		return c.JSON(http.StatusBadRequest, "Invalid ID format")
+	}
+
+	updateModel := new(ReqUpdateCloudModel)
+	// Verify loaded data without prefix
+	_, exists := lkvstore.Get(c.Param("id"))
+	if exists {
+		fmt.Printf("Succeeded in Finding the model : '%s'\n", c.Param("id"))
+		fmt.Printf("### MyCloudModel ID to Update : [%s]", c.Param("id"))
+
+		// updateModel = new(ReqUpdateCloudModel)
+		if err := c.Bind(updateModel); err != nil {
+			return c.JSON(http.StatusBadRequest, "Invalid Request")
+		}	
+		updateModel.Id = id
+		// fmt.Println("### MyCloudModel",)		
+		// spew.Dump(updateCloudModel)
+
+		// Convert to String type
+		strNum := strconv.Itoa(id)
+
+		// Save the model to the key-value store
+		lkvstore.Put(strNum, updateModel)
+
+	} else {
+		newErr := fmt.Errorf("Failed to Find the Model : [%s]\n", c.Param("id"))
+		return c.JSON(http.StatusNotFound, newErr)
+	}
+
+	// Save the current state of the key-value store to file
+	if err := lkvstore.SaveLkvStore(); err != nil {
+		fmt.Printf("Failed to Save the lkvstore to file. : [%v]\n", err)
+	} else {
+		fmt.Println("Succeeded in Saving the lkvstore to file.")
+	}	
+
+	return c.JSON(http.StatusCreated, updateModel)
+}
+
+// [Note]
+// No RequestBody required for "DELETE /model/{id}"
+
+// [Note]
+// No ResponseBody required for "DELETE /model/{id}"
+
+// DeleteCloudModel godoc
+// @Summary Delete a model
+// @Description Delete a model with the given information.
+// @Tags [API] Cloud Migration Models (TBD)
+// @Accept  json
+// @Produce  json
+// @Param id path int true "Model ID"
+// @Success 200 {string} string "Model deletion successful"
+// @Failure 400 {object} object "Invalid Request"
+// @Failure 404 {object} object "Model Not Found"
+// @Router /model/cloud/{id} [delete]
+func DeleteCloudModel(c echo.Context) error {
 	if strings.EqualFold(c.Param("id"), "") {
 		return c.JSON(http.StatusBadRequest, "Invalid ID!!")
 	}
